# Indirect_Predicates

./: .gitignore  CMakeLists.txt  README.md  implicit_point.cpp  implicit_point.h  indirectPredicates.vcxproj  numerics.cpp  numerics.h  test.cpp
.github/workflows/: continuous.yml
JPCK/: converter.cpp  converter.vcxproj
JPCK/predicates/: README.txt
JPCK/predicates/direct/: dotProductSign2D.txt  dotProductSign3D.txt  inGabrielSphere.txt  incircle_fma.txt  misaligned3d.txt
JPCK/predicates/indirect/: dotProductSign2D_EEI.txt  dotProductSign2D_IEE.txt  dotProductSign2D_IEI.txt  dotProductSign2D_IIE.txt  dotProductSign2D_III.txt  dotProductSign3D_EEI.txt  dotProductSign3D_IEE.txt  dotProductSign3D_IEI.txt  dotProductSign3D_IIE.txt  dotProductSign3D_III.txt  inGabrielSphere_EIEE.txt  inGabrielSphere_EIIE.txt  inGabrielSphere_EIII.txt  inGabrielSphere_IEEE.txt  inGabrielSphere_IIEE.txt  inGabrielSphere_IIIE.txt  inGabrielSphere_IIII.txt  inSphere_IEEEE.txt  inSphere_IIEEE.txt  inSphere_IIIEE.txt  inSphere_IIIIE.txt  inSphere_IIIII.txt  incircle_indirect_IEEE.txt  incircle_indirect_IIEE.txt  incircle_indirect_IIIE.txt  incircle_indirect_IIII.txt  incircle_indirect_LLEE.txt  incircle_indirect_SSEE.txt  incirclexy_indirect_IEEE.txt  incirclexy_indirect_IIEE.txt  incirclexy_indirect_IIIE.txt  incirclexy_indirect_IIII.txt  lambda3d_BPT.txt  lambda3d_LNC.txt  lessThanOnX_IE.txt  lessThanOnX_II.txt  lessThanOnX_LE.txt  lessThanOnX_LL.txt  lessThanOnX_LT.txt  lessThanOnX_TE.txt  (+61 more)
JPCK/predicates/indirect-old/: inSphere_LEEEE.txt  inSphere_LLEEE.txt  inSphere_LLLEE.txt  inSphere_LLLLE.txt  inSphere_LLLLL.txt  inSphere_LLLLT.txt  inSphere_LLLTE.txt  inSphere_LLLTT.txt  inSphere_LLTEE.txt  inSphere_LLTTE.txt  inSphere_LLTTT.txt  inSphere_LTEEE.txt  inSphere_LTTEE.txt  inSphere_LTTTE.txt  inSphere_LTTTT.txt  inSphere_TEEEE.txt  inSphere_TTEEE.txt  inSphere_TTTEE.txt  inSphere_TTTTE.txt  inSphere_TTTTT.txt
cmake/: simde.cmake
include/: hand_optimized_predicates.hpp  implicit_point.h  implicit_point.hpp  indirect_predicates.h  indirect_predicates.hpp  memPool.h  numerics.h  numerics.hpp
predicates/: hand_optimized_predicates.cpp  indirect_predicates.cpp  indirect_predicates.h
update_predicates/: indirect_predicates.h  indirect_predicates.hpp  update_source_code.bat
